--- a/src/main/resources/templates/forms/gerenciarFormularios.html
+++ b/src/main/resources/templates/forms/gerenciarFormularios.html
@@ -53,7 +53,7 @@
                                     <td th:text="${form.enderecoExibicaoSensor}">...</td>
                                     <td>
                                         <a class="btn btn-primary" th:href="@{formulario/{id}(id=${form.id})}"
-                                            role="button">Editar</a>
+                                            role="button">Visualizar</a>
                                     </td>
                                 </tr>
 
