--- a/src/main/resources/templates/user/cadastroUsuario.html
+++ b/src/main/resources/templates/user/cadastroUsuario.html
@@ -155,86 +155,15 @@
                   </label>
                 </div>
                 <!--DASH-->
-                <!--DOCKER
-                <div class="form-check">
-                  <input class="form-check-input" type="checkbox" th:field="*{accessDocker}">
-                  <label class="form-check-label" for="formCheckBox">
-                    Acesso ao Listar Docker
-                  </label>
-                </div>
-                <div class="form-check">
-                  <input class="form-check-input" type="checkbox" th:field="*{accessManageDocker}">
-                  <label class="form-check-label" for="formCheckBox">
-                    Acesso ao Visualizar Docker
-                  </label>
-                </div>
-                <div class="form-check">
-                  <input class="form-check-input" type="checkbox" th:field="*{accessResgisterDocker}">
-                  <label class="form-check-label" for="formCheckBox">
-                    Acesso ao Cadastro Docker
-                  </label>
-                </div>
-                DOCKER-->
                 <!--Formulário-->
-                <div class="form-check">
-                  <input class="form-check-input" type="checkbox" th:field="*{accessForms}">
-                  <label class="form-check-label" for="formCheckBox">
-                    Acesso ao Listar Formulário
-                  </label>
-                </div>
-                <div class="form-check">
-                  <input class="form-check-input" type="checkbox" th:field="*{accessManageForms}">
-                  <label class="form-check-label" for="formCheckBox">
-                    Acesso ao Visualizar Formulário
-                  </label>
-                </div>
                 <div class="form-check">
                   <input class="form-check-input" type="checkbox" th:field="*{accessRegisterForms}">
                   <label class="form-check-label" for="formCheckBox">
-                    Acesso ao Cadastro Formulário
+                    Acesso ao Formulário
                   </label>
                 </div>
                 <!--Formulário-->
-                <!--Usuário
-                <div class="form-check">
-                  <input class="form-check-input" type="checkbox" th:field="*{accessUsers}">
-                  <label class="form-check-label" for="formCheckBox">
-                    Acesso ao Listar Usuário
-                  </label>
-                </div>
-                <div class="form-check">
-                  <input class="form-check-input" type="checkbox" th:field="*{accessManageUser}">
-                  <label class="form-check-label" for="formCheckBox">
-                    Acesso ao Visualizar Usuário
-                  </label>
-                </div>
-                <div class="form-check">
-                  <input class="form-check-input" type="checkbox" th:field="*{accessRegisterUser}">
-                  <label class="form-check-label" for="formCheckBox">
-                    Acesso ao Cadastro Usuário
-                  </label>
-                </div>
-                Usuário-->
-                <!--Clientes-->
-                <div class="form-check">
-                  <input class="form-check-input" type="checkbox" th:field="*{accessClients}">
-                  <label class="form-check-label" for="formCheckBox">
-                    Acesso ao Listar Clientes
-                  </label>
-                </div>
-                <div class="form-check">
-                  <input class="form-check-input" type="checkbox" th:field="*{accessManageClients}">
-                  <label class="form-check-label" for="formCheckBox">
-                    Acesso ao Visualizar Clientes
-                  </label>
-                </div>
-                <div class="form-check">
-                  <input class="form-check-input" type="checkbox" th:field="*{accessRegisterClients}">
-                  <label class="form-check-label" for="formCheckBox">
-                    Acesso ao Cadastro Clientes
-                  </label>
-                </div>
-                <!--Clientes-->
+
 
                 <div class="row mx-4 d-flex">
                   <button class="btn btn-primary" type="submit">Cadastrar</button>
