--- a/src/main/resources/templates/clients/cadastroAdministrador.html
+++ b/src/main/resources/templates/clients/cadastroAdministrador.html
@@ -42,15 +42,16 @@
                         </label>
                     </div>
 
-
+                    <div id="welcomeDiv" style="display:none;" class="answer_list"> WELCOME</div>
+                    <input type="button" name="answer" value="Show Div" onclick="showDiv()" />
                     <div class="form-row">
                         <div class="col-md mb-3">
                             <label for="nome">Nome </label>
                             <button type="button" class="btn btn-sm" data-bs-toggle="popover" title="Nome "
                                 data-bs-content="Seu nome pessoal ou ficticio, o qual será utilizado para referi-lo.">?</button>
                             <!--is-valid-->
-                            <input th:field="*{nome}" type="text" class="form-control lightMode"
-                                id="nome" placeholder="Empresa..." required>
+                            <input th:field="*{nome}" type="text" class="form-control lightMode" id="nome"
+                                placeholder="Empresa..." required>
                             <div class="valid-feedback">
                                 Nome válido!
                             </div>
@@ -60,7 +61,7 @@
                             </div>
                         </div>
                     </div>
-                    
+
                     <div class="form-row">
                         <div class="col-md mb-3">
                             <label for="validationEmail">E-mail</label>
@@ -133,7 +134,11 @@
                     </script>
                 </form>
             </div>
-            <script th:src="@{/js/cookies.js}" type="text/javascript"></script>
+            <script th:src="@{/js/cookies.js}" type="text/javascript">
+                function showDiv() {
+                    document.getElementById('welcomeDiv').style.display = "block";
+                }
+            </script>
             <script>
                 function valida() {
                     // Fetch all the forms we want to apply custom Bootstrap validation styles to
@@ -247,7 +252,7 @@
                     return false
                 }
 
-             
+
             </script>
 
 </body>
